[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/SpriteSheet/bossswitch.png" type="Texture" id=1]
[ext_resource path="res://Sounds/523424__andersmmg__ding-3.wav" type="AudioStream" id=2]
[ext_resource path="res://World_Elements/BossSwitch.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 11, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 11, 9 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "disabled",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="SwitchArea" type="Area2D"]
script = ExtResource( 3 )

[node name="BossSwitchCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite_State" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "disabled"

[node name="DingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
